Add code for initial requirements

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
+    <div class="navbar">
+        <h1 class="header">Etch-a-Sketch</h1>
+    </div>
     
-    <h1>Etch-a-Sketch</h1>
+    <div class="container">
+
+    </div>
 
     <script src="script.js"></script>
 </body>
